--- a/moon-ephemeris/index.html
+++ b/moon-ephemeris/index.html
@@ -11,6 +11,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moon Ephemeris Overview</title>
+    <meta name="description" id="metaDescription" content="EME Moon Ephemeris Overview" />
+    <meta name="keywords" content="EME, Lunar Ephemeris, Moon Ephemeris, Moonbounce, Ham Radio, Amateur Radio, Moon Tracking, Moon Declination, Signal Loss, EME Path loss, Moon Distance" />
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="SA5IKN">
+    <meta property="og:title" id="ogTitle" content="EME Moon Ephemeris Overview">
+        <meta property="og:type" content="website">
+            <meta property="og:description" id="ogDescription" content="Interactive Moon Ephemeris Overview for Earth-Moon-Earth (EME) communication by SA5IKN">
+                <meta property="og:image" content="https://dxer.site/social/moon-ephemeris.jpg">
+                    <meta property="og:url" content="https://dxer.site/moon-ephemeris/">
+                        <meta name="twitter:card" content="summary_large_image">
+                            <meta name="twitter:title" id="twitterTitle" content="EME Moon Ephemeris Overview" />
+                            <meta name="twitter:description" id="twitterDescription" content="Interactive Moon Ephemeris Overview for Earth-Moon-Earth (EME) communication by SA5IKN" />
+                            <meta name="twitter:image" content="https://dxer.site/social/moon-ephemeris.jpg" />
+                            <link rel="canonical" href="https://dxer.site/moon-ephemeris/" />
+                            <!-- Favicon and App Icons -->
+                            <link rel="apple-touch-icon" sizes="180x180" href="https://dxer.site/assets/apple-touch-icon.png">
+                                <link rel="icon" type="image/png" sizes="32x32" href="https://dxer.site/assets/favicon-32x32.png">
+                                    <link rel="icon" type="image/png" sizes="16x16" href="https://dxer.site/assets/favicon-16x16.png">
+                                        <link rel="manifest" href="https://dxer.site/assets/site.webmanifest">
+                                            <link rel="shortcut icon" href="https://dxer.site/assets/favicon.ico">
     <script src="https://dxer.site/eme-observer/a.ob.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.4/dist/chart.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
