--- a/eme-observer/noise copy 3.html
+++ b/eme-observer/noise copy 3.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
       <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
       <title>Sky Observer</title>
       <style>
         body {
@@ -157,7 +157,7 @@
           outline: none;
           width: 80vw;
           max-width: 300px;
-          touch-action: pan-x;
+          touch-action: pan-y;
           z-index: 30;
         }
         #timeSlider::-webkit-slider-thumb {
@@ -266,7 +266,7 @@
           #colorBarContainer {
             position: absolute;
             bottom: 80px;
-            righ t: 10px;
+            right: 10px;
             width: 40px;
             height: auto;
             top: auto;
@@ -296,67 +296,22 @@
                 by SA5IKN
               </div>
               <div style="font-size: 16px; color: white; font-weight: 600; background: rgba(0, 0, 0, 0.6); padding: 2px 4px; border-radius: 2px;">
-                EME Noise Mapper
+                Sky Observer
               </div>
             </div>
             <div style="display: flex; flex-direction: row; gap: 4px;">
-                <a href="https://dxer.site" target="_blank" title="Go to homepage"
-                   style="
-                     display: inline-flex;
-                     align-items: center;
-                     justify-content: center;
-                     width: 32px;
-                     height: 32px;
-                     background: rgba(255,255,255,0.1);
-                     color: white;
-                     border-radius: 6px;
-                     text-decoration: none;
-                     transition: background 0.2s ease;
-                   ">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="white">
-                    <path d="M12 3l9 9h-3v9h-12v-9h-3l9-9z"/>
-                  </svg>
-                </a>
-
-                <a href="https://dxer.site/eme-observer/" target="_blank" title="EME Observer"
-                   style="
-                     display: inline-flex;
-                     align-items: center;
-                     justify-content: center;
-                     width: 32px;
-                     height: 32px;
-                     background: rgba(255,255,255,0.1);
-                     color: white;
-                     border-radius: 6px;
-                     text-decoration: none;
-                     transition: background 0.2s ease;
-                   "
-                   onmouseover="this.style.background='rgba(255,255,255,0.25)'"
-                   onmouseout="this.style.background='rgba(255,255,255,0.1)'">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="white">
-                    <path d="M15 4l-6 2-6-2v16l6 2 6-2 6 2v-16l-6-2zm0 2.47l4 .8v12.26l-4-.8v-12.26zm-6 12.26l-4-.8v-12.26l4 .8v12.26zm2-.37v-12.72l2-.67v12.72l-2 .67z"/>
-                  </svg>
-                </a>
-
-                <a href="https://dxer.site/sky-observer/" target="_blank" title="Help"
-                   style="
-                     display: inline-flex;
-                     align-items: center;
-                     justify-content: center;
-                     width: 32px;
-                     height: 32px;
-                     background: rgba(255,255,255,0.1);
-                     color: white;
-                     border-radius: 6px;
-                     text-decoration: none;
-                     transition: background 0.2s ease;
-                   "
-                   onmouseover="this.style.background='rgba(255,255,255,0.25)'"
-                   onmouseout="this.style.background='rgba(255,255,255,0.1)'">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="white">
-                      <path d="M12 2c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4zm-1 16h2v-2h-2v2z"/>
-                  </svg>
-                </a>
+              <a href="https://dxer.site" target="_blank" title="Go to homepage"
+                 style="text-decoration: none; font-size: 16px; background: rgba(255,255,255,0.1); color: white; padding: 2px 6px; border-radius: 4px;">
+                🏠
+              </a>
+              <a href="https://dxer.site/eme-observer/" target="_blank" title="Go to EME Observer"
+                 style="text-decoration: none; font-size: 16px; background: rgba(255,255,255,0.1); color: white; padding: 2px 6px; border-radius: 4px;">
+                🗺️
+              </a>
+              <a href="https://dxer.site/sky-observer-faq.html" target="_blank" title="Open FAQ"
+                 style="text-decoration: none; font-size: 16px; background: rgba(255,255,255,0.1); color: white; padding: 2px 6px; border-radius: 4px;">
+                ❓
+              </a>
             </div>
           </div>
         </div>
@@ -384,7 +339,7 @@
           </div>
           <div style="display: flex; align-items: center; gap: 4px;">
             <label for="dxGridInput">DX locator:</label>
-            <input type="text" id="dxGridInput" maxlength="6" placeholder="e.g. IO91vm"
+            <input type="text" id="dxGridInput" maxlength="6" placeholder="e.g. FN20as"
                    style="width: 60px; font-size: 11px; padding: 2px 4px; border-radius: 4px; border: none;">
           </div>
           <div style="display: flex; flex-direction: column; gap: 2px;">
@@ -405,7 +360,7 @@
             <label for="showSun">Show sun</label>
           </div>
           <div id="demoStatus" style="color: red; font-weight: bold; margin-top: 10px;">
-            This is a DEMO! Load your CSV file and enter your locator
+            Demo loaded!
           </div>
         </div>
 
@@ -446,34 +401,6 @@
         <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/geometries/TextGeometry.js"></script>
 
         <script>
-          // Prevent double-tap zoom on mobile
-          let lastTouchEnd = 0;
-          document.addEventListener('touchstart', function(event) {
-            if (event.touches.length > 1) {
-              event.preventDefault();
-            }
-          }, { passive: false });
-
-          document.addEventListener('touchend', function(event) {
-            const now = new Date().getTime();
-            if (now - lastTouchEnd <= 300) {
-              event.preventDefault();
-            }
-            lastTouchEnd = now;
-          }, false);
-
-          document.addEventListener('gesturestart', function(event) {
-            event.preventDefault();
-          }, false);
-
-          document.addEventListener('gesturechange', function(event) {
-            event.preventDefault();
-          }, false);
-
-          document.addEventListener('gestureend', function(event) {
-            event.preventDefault();
-          }, false);
-
           const scene = new THREE.Scene();
           const moonTrajectoryGroup = new THREE.Group();
           const sunTrajectoryGroup = new THREE.Group();
@@ -1446,33 +1373,27 @@
             if (commonMoonSegment.length > 1) commonMoonSegments.push(commonMoonSegment);
 
             moonSegments.forEach(seg => {
-              if (seg.length < 2) return;
-              const curve = new THREE.CatmullRomCurve3(seg);
-              const tubeGeom = new THREE.TubeGeometry(curve, 64, 0.005, 8, false);
-              const tubeMat = new THREE.MeshBasicMaterial({ color: 0xffff00 });
-              const tube = new THREE.Mesh(tubeGeom, tubeMat);
-              tube.userData = { isMoonTrajectory: true };
-              moonTrajectoryGroup.add(tube);
+              const geom = new THREE.BufferGeometry().setFromPoints(seg);
+              const mat = new THREE.LineBasicMaterial({ color: 0xffff00 });
+              const line = new THREE.Line(geom, mat);
+              line.userData = { isMoonTrajectory: true };
+              moonTrajectoryGroup.add(line);
             });
 
             commonMoonSegments.forEach(seg => {
-              if (seg.length < 2) return;
-              const curve = new THREE.CatmullRomCurve3(seg);
-              const tubeGeom = new THREE.TubeGeometry(curve, 64, 0.007, 8, false);
-              const tubeMat = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
-              const tube = new THREE.Mesh(tubeGeom, tubeMat);
-              tube.userData = { isCommonMoonTrajectory: true };
-              moonTrajectoryGroup.add(tube);
+              const geom = new THREE.BufferGeometry().setFromPoints(seg);
+              const mat = new THREE.LineBasicMaterial({ color: 0x00ff00, linewidth: 1 });
+              const line = new THREE.Line(geom, mat);
+              line.userData = { isCommonMoonTrajectory: true };
+              moonTrajectoryGroup.add(line);
             });
 
             sunSegments.forEach(seg => {
-              if (seg.length < 2) return;
-              const curve = new THREE.CatmullRomCurve3(seg);
-              const tubeGeom = new THREE.TubeGeometry(curve, 64, 0.005, 8, false);
-              const tubeMat = new THREE.MeshBasicMaterial({ color: 0xffa500 });
-              const tube = new THREE.Mesh(tubeGeom, tubeMat);
-              tube.userData = { isSunTrajectory: true };
-              sunTrajectoryGroup.add(tube);
+              const geom = new THREE.BufferGeometry().setFromPoints(seg);
+              const mat = new THREE.LineBasicMaterial({ color: 0xffa500 });
+              const line = new THREE.Line(geom, mat);
+              line.userData = { isSunTrajectory: true };
+              sunTrajectoryGroup.add(line);
             });
 
             sunTrajectoryGroup.visible = showSunCheckbox.checked;
@@ -1612,7 +1533,7 @@
                 updateTimeDisplay();
 
                 if (csvSource === 'demo') {
-                  demoStatus.textContent = 'This is a DEMO! Load your CSV file and enter your locator';
+                  demoStatus.textContent = 'Demo loaded!';
                   demoStatus.style.color = 'red';
                   demoStatus.style.display = 'block';
                 } else if (csvSource === 'stored') {
