--- a/eme-observer/noise copy 5.html
+++ b/eme-observer/noise copy 5.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
       <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
       <title>Sky Observer</title>
       <style>
         body {
@@ -157,7 +157,7 @@
           outline: none;
           width: 80vw;
           max-width: 300px;
-          touch-action: pan-x;
+          touch-action: pan-y;
           z-index: 30;
         }
         #timeSlider::-webkit-slider-thumb {
@@ -446,34 +446,6 @@
         <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/geometries/TextGeometry.js"></script>
 
         <script>
-          // Prevent double-tap zoom on mobile
-          let lastTouchEnd = 0;
-          document.addEventListener('touchstart', function(event) {
-            if (event.touches.length > 1) {
-              event.preventDefault();
-            }
-          }, { passive: false });
-
-          document.addEventListener('touchend', function(event) {
-            const now = new Date().getTime();
-            if (now - lastTouchEnd <= 300) {
-              event.preventDefault();
-            }
-            lastTouchEnd = now;
-          }, false);
-
-          document.addEventListener('gesturestart', function(event) {
-            event.preventDefault();
-          }, false);
-
-          document.addEventListener('gesturechange', function(event) {
-            event.preventDefault();
-          }, false);
-
-          document.addEventListener('gestureend', function(event) {
-            event.preventDefault();
-          }, false);
-
           const scene = new THREE.Scene();
           const moonTrajectoryGroup = new THREE.Group();
           const sunTrajectoryGroup = new THREE.Group();
