--- a/eme-observer/statistics.html
+++ b/eme-observer/statistics.html
@@ -14,7 +14,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <meta name="description" content="View detailed statistics and charts from EME Observer. Analyze station activity, moonbounce trends, and other amateur radio metrics." />
-  <meta name="keywords" content="EME Statistics, Moonbounce Stats, 10GHz, Ham Radio, Amateur Radio, EME Observer" />
+  <meta name="keywords" content="EME Statistics, Moonbounce Stats, Ham Radio, Amateur Radio, EME Observer" />
   <meta name="author" content="SA5IKN" />
   <meta name="robots" content="index, follow" />
 
@@ -48,7 +48,7 @@
     "@type": "WebPage",
     "name": "EME Observer – Statistics",
     "url": "https://dxer.site/eme-observer/statistics.html",
-    "description": "View detailed statistics from the EME Observer tool for 10GHz moonbounce activity.",
+    "description": "View detailed statistics from the EME Observer tool for moonbounce activity.",
     "inLanguage": "en",
     "author": {
       "@type": "Person",
