--- a/eme-observer/noise copy 6.html
+++ b/eme-observer/noise copy 6.html
@@ -1495,7 +1495,7 @@
             }
             Papa.parse(csvText, {
               header: true,
-              delimiter: "",
+              delimiter: ";",
               skipEmptyLines: true,
               complete: function (results) {
                 rawPoints.length = 0;
