--- a/enp/noise.html
+++ b/enp/noise.html
@@ -3,7 +3,7 @@
     <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-      <title>Sky Observer</title>
+      <title>EME Noise Mapper</title>
       <style>
         body {
           margin: 0;
@@ -338,7 +338,7 @@
                   </svg>
                 </a>
 
-                <a href="https://dxer.site/sky-observer/" target="_blank" title="Help"
+                <a href="https://dxer.site/eme-noise-mapper/user-guide.html" target="_blank" title="Help"
                    style="
                      display: inline-flex;
                      align-items: center;
