--- a/enp/noise.html
+++ b/enp/noise.html
@@ -438,7 +438,7 @@
           <div id="minNoiseLabel" style="position: absolute; bottom: -145px; left: 50%; transform: translateX(-75%); text-align: center; width: 100%; z-index: 31; background: rgba(0,0,0,0.6); padding: 2px 4px; border-radius: 2px; line-height: 1.2;">-- dB</div>
         </div>
 
-        <script src="a.ob.js"></script>
+        <script src="/eme-observer/a.ob.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/build/three.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/controls/OrbitControls.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
